jlinked docker image
Signed-off-by: Raymond Auge <raymond.auge@liferay.com>